--- a/django-models/LibraryProject/relationship_app/templates/books/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/books/library_detail.html
@@ -1,3 +1,4 @@
+<!-- library_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +9,8 @@
     <h1>Library: {{ library.name }}</h1>
     <h2>Books in Library:</h2>
     <ul>
-        {% for book in books %}
-        <li>{{ book.title }} by {{ book.author.name }}</li>
-        {% empty %}
-        <li>No books found in this library.</li>
+        {% for book in library.books.all %}
+        <li>{{ book.title }} by {{ book.author.name }} </li>
         {% endfor %}
     </ul>
 </body>
